增加 PinAdmin 类、应用类、门面和服务提供者等基础文件

--- a/composer.json
+++ b/composer.json
@@ -21,5 +21,15 @@
         "psr-4": {
             "CodeSinging\\PinAdmin\\Tests\\": "tests"
         }
+    },
+    "extra": {
+        "laravel": {
+            "providers": [
+                "CodeSinging\\PinAdmin\\PinAdminServiceProvider"
+            ],
+            "aliases": {
+                "Admin": "CodeSinging\\PinAdmin\\Admin"
+            }
+        }
     }
 }
