完善 PinAdmin 的核心类功能

--- a/composer.json
+++ b/composer.json
@@ -15,11 +15,14 @@
     "autoload": {
         "psr-4": {
             "CodeSinging\\PinAdmin\\": "src"
-        }
+        },
+        "files": [
+            "src/Support/helpers.php"
+        ]
     },
     "autoload-dev": {
         "psr-4": {
-            "CodeSinging\\PinAdmin\\Tests\\": "tests"
+            "Tests\\": "tests"
         }
     },
     "extra": {
